src/src/objects/EM_Expenses__c.object
<CustomObject>
    <fields>
        <fullName>EM_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>LMS_Employee__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EM_Expense_Amount__c</fullName>
        <label>Expense Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EM_GST_Number__c</fullName>
        <label>GST Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EM_Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EM_Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EM_Items_Purchased__c</fullName>
        <label>Items Purchased</label>
        <type>TextArea</type>
    </fields>
    <label>Expenses</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EM-{0000}</displayFormat>
        <label>Expenses Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>GST_validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( REGEX( EM_GST_Number__c  , &quot;[0-9]{2}[A-Za-z]{5}[0-9]{4}[A-Za-z]{1}[0-9]{1}[A-Za-z]{1}[0-9]{1}&quot;))</errorConditionFormula>
        <errorDisplayField>EM_GST_Number__c</errorDisplayField>
        <errorMessage>Please Enter valid GST Number</errorMessage>
    </validationRules>
</CustomObject>